--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -6,8 +6,8 @@ body {
     color: #333333;
 }
 
-body.modo-escuro{
-    background-color: #212121;
+body.modo-escuro {
+    background-color: black;
     color: #f5f5f5;
 }
 
@@ -17,8 +17,7 @@ header {
     padding: 25px;
 }
 
-header .logo,
-header .imagem-botao {
+header .logo, header .imagem-botao {
     width: 30px;
     transition: 0.2s ease-in-out;
 }
@@ -28,9 +27,7 @@ header #botao-alterar-tema {
     border: none;
 }
 
-header .logo:hover,
-header .imagem-botao:hover,
-main .cartao-pokemon:hover {
+header .logo:hover, header .imagem-botao:hover, main .cartao-pokemon:hover {
     transform: scale(1.05);
     cursor: pointer;
 }
@@ -87,36 +84,43 @@ main .cartao-pokemon .gif {
 main .cartao-pokemon .tipos {
     display: flex;
     gap: 15px;
-}
+    padding: 8px;  
 
-main .cartao-pokemon .tipos {
-    padding: 8px;
-    border-radius: 30px
 }
 
 .grama {
+    padding: 8px;
+    border-radius: 30px;
     background-color: #7ac74c;
 }
 
 .veneno {
+    padding: 8px;
+    border-radius: 30px;
     background-color: #df67ddfb;
 }
 
 .fogo {
+    padding: 8px;
+    border-radius: 30px;
     background-color: #ee8130;
 }
 
 .agua {
+    padding: 8px;
+    border-radius: 30px;
     background-color: #6390f0;
 }
 
 .inseto {
+    padding: 8px;
+    border-radius: 30px;
     background-color: #a6b91a;
 }
 
 main .descricao {
     max-height: 80px;
-    overflow-y: scroll;
+    overflow: overlay;
     font-size: 14px;
     padding-right: 10px;
 }
